# intel-mkl-src

./: CLAUDE.md  README.md
intel-mkl-src/: Cargo.toml  build.rs
intel-mkl-sys/: Cargo.toml
intel-mkl-sys/benches/: cos.rs
intel-mkl-tool/: Cargo.toml
intel-mkl-tool/src/: entry.rs
