[package]
name = "intel-mkl-tool"
version = "0.8.2"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"
rust-version = "1.72.0"

description = "Seek Intel(R) MKL library from system"
repository = "https://github.com/rust-math/intel-mkl-src"
keywords = []
license = "MIT"

readme = "../README.md"

[features]
# Do not allow linking dynamic library for mkl-static-*-iomp
openmp-strict-link-type = []

[dependencies]
anyhow = "1"
log = "0.4"
walkdir = "2"

[dev-dependencies]
env_logger = "0.11"
